# email-triage-env

./: .dockerignore  .gitignore  Dockerfile  GRADER_FIX.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  pyrightconfig.json  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  email_data.py  environment.py  requirements.txt
tasks/: __init__.py
tasks/easy_triage/: __init__.py  grader.py
tasks/hard_triage/: __init__.py  grader.py
tasks/medium_triage/: __init__.py  grader.py
tests/: test_environment.py
